<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_attachment_reader_title">File</string>
</resources>
